# masq

backend/: Cargo.toml
backend/migrations/: 01_users.down.sql  01_users.sql  01_users.up.sql  02_groups.down.sql  02_groups.up.sql  02_inbox.down.sql  02_inbox.up.sql  03_inbox_recipients.down.sql  03_inbox_recipients.up.sql  03_messages.up.sql  04_inbox_dm_recipients.down.sql  04_inbox_dm_recipients.up.sql  04_message_recipients.down.sql  04_message_recipients.sql  04_message_recipients.up.sql  04_messages.up.sql  05_messages.down.sql  05_messages.up.sql
backend/migrations/2023-10-08-111152_create_posts/: up.sql
backend/migrations/2023-10-08-111152_create_users/: up.sql
backend/migrations/2023-10-08-120612_create_groups/: up.sql
backend/migrations/2023-10-10-054239_create_messages/: up.sql
backend/migrations/2023-10-10-054842_create_message_recipients/: down.sql  up.sql
backend/src/: database.rs  error.rs  lib.rs  main.rs  models.rs  schema.rs  users.rs
backend/src/api/: error.rs  message.rs  mod.rs  user.rs
backend/src/database/: database.rs  error.rs  mod.rs  schema.rs
backend/src/middleware/: auth.rs  error.rs  jwt.rs  mod.rs
backend/src/routes/: error.rs  mod.rs  users.rs  users_login.rs
backend/src/routes/messages/: messages.rs  mod.rs  models.rs
backend/src/routes/users/: mod.rs  models.rs  users.rs  users_login.rs
backend/src/routes/websocket/: mod.rs  websocket.rs
backend/src/utils/: crypt.rs  pwd.rs
backend/src/web/: error.rs  mod.rs  state.rs  user.rs  users.rs
frontend/: jsconfig.json  package-lock.json  package.json  (+1 more)
(+20 files in other folders)
