[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
tokio = { version = "1.32.0", features = ["full"]}
diesel = { version = "2.1.0", features = ["postgres", "chrono", "r2d2", "uuid"] }
serde = {version = "1.0.188", features = ["derive"]}
dotenvy = "0.15.0"
chrono = "0.4.31"
uuid = {version = "1.4.1", features = ["v4"]}
hex = "0.4.3"
bcrypt = "0.15.0"
rand = "0.8.5"
crypto_box = "0.9.1"
