[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.49"
axum = { version = "0.6.20", features = ["headers", "macros"]}
sqlx = { version = "0.7.2", features = ["postgres", "runtime-tokio", "uuid", "chrono"]}
tokio = { version = "1.32.0", features = ["full"]}
tower-cookies = { version = "0.9.0", features = ["axum-core"]}
tower-http = { version = "0.4.4", features = ["cors"] }
serde = { version = "1.0.188", features = ["derive"]}
serde_with = { version = "3.3.0", features = ["chrono_0_4"] }
dotenvy = "0.15.0"
chrono = "0.4.31"
uuid = {version = "1.4.1", features = ["v4", "serde"]}
hex = "0.4.3"
bcrypt = "0.15.0"
rand = "0.8.5"
crypto_box = "0.9.1"
serde_json = "1.0.107"
strum_macros = "0.25.2"
axum-macros = "0.3.8"
jsonwebtoken = "8.3.0"
